--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsgo --noEmit"
   },
   "devDependencies": {
     "@bun-hono-ddd-template/eslint-config": "workspace:*",
     "@bun-hono-ddd-template/typescript-config": "workspace:*",
-    "typescript": "^5.6.3",
-    "eslint": "^9.12.0"
+    "typescript": "catalog:tooling",
+    "eslint": "catalog:tooling",
+    "@typescript/native-preview": "catalog:tooling"
   }
 }
